{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 62,
  "lineage": "02ac4aca-4519-8dc7-cd69-72bb11c99195",
  "resources": [
    {
      "module": "module.dev-infra-app",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:497068062705:vpc/vpc-0d2041036d439e868",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0971a33f3fa726544",
            "default_route_table_id": "rtb-0fab7327bc1f89bdd",
            "default_security_group_id": "sg-06b2a5897b42ddbf6",
            "dhcp_options_id": "dopt-09e57ad3790516b76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0d2041036d439e868",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fab7327bc1f89bdd",
            "owner_id": "497068062705",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:497068062705:instance/i-06cd931c971604322",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06cd931c971604322",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_terra_key_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b5661f95e4cce058"
              }
            ],
            "primary_network_interface_id": "eni-0b5661f95e4cce058",
            "private_dns": "ip-172-31-23-136.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.136",
            "public_dns": "ec2-18-237-78-54.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.78.54",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-095200f18ab2de2ae",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-secret-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b779a9b31694136",
            "tags": {
              "Name": "dev-Custom-EC2-Instance",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-Custom-EC2-Instance",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cebc0d0e33b8e97d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497068062705",
            "id": "i-06cd931c971604322",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra-app.aws_default_vpc.default",
            "module.dev-infra-app.aws_key_pair.my_key",
            "module.dev-infra-app.aws_security_group.my-secret-group"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-secret-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:497068062705:security-group/sg-0cebc0d0e33b8e97d",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cebc0d0e33b8e97d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from anywhere in the world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access from anywhere in the world",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-secret-group",
            "name_prefix": "",
            "owner_id": "497068062705",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-secret-group"
            },
            "tags_all": {
              "Name": "my-secret-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2041036d439e868"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497068062705",
            "id": "sg-0cebc0d0e33b8e97d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra-app.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra-app",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:497068062705:vpc/vpc-0d2041036d439e868",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0971a33f3fa726544",
            "default_route_table_id": "rtb-0fab7327bc1f89bdd",
            "default_security_group_id": "sg-06b2a5897b42ddbf6",
            "dhcp_options_id": "dopt-09e57ad3790516b76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0d2041036d439e868",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fab7327bc1f89bdd",
            "owner_id": "497068062705",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prd-infra-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:497068062705:instance/i-0ab7e14d8974201ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab7e14d8974201ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prd_terra_key_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00e7356d56b28d830"
              }
            ],
            "primary_network_interface_id": "eni-00e7356d56b28d830",
            "private_dns": "ip-172-31-17-55.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.55",
            "public_dns": "ec2-34-219-156-145.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.156.145",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050ff34e3ec3e21a8",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-secret-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b779a9b31694136",
            "tags": {
              "Name": "prd-Custom-EC2-Instance",
              "environment": "prd"
            },
            "tags_all": {
              "Name": "prd-Custom-EC2-Instance",
              "environment": "prd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b91cd50d1a0c257"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497068062705",
            "id": "i-0ab7e14d8974201ca",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra-app.aws_default_vpc.default",
            "module.prd-infra-app.aws_key_pair.my_key",
            "module.prd-infra-app.aws_security_group.my-secret-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:497068062705:instance/i-0805eff1cf108f392",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0805eff1cf108f392",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prd_terra_key_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07b2467959a88a6f8"
              }
            ],
            "primary_network_interface_id": "eni-07b2467959a88a6f8",
            "private_dns": "ip-172-31-18-57.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.57",
            "public_dns": "ec2-34-220-142-169.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.142.169",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b6c80a8d354bf8a7",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-secret-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b779a9b31694136",
            "tags": {
              "Name": "prd-Custom-EC2-Instance",
              "environment": "prd"
            },
            "tags_all": {
              "Name": "prd-Custom-EC2-Instance",
              "environment": "prd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b91cd50d1a0c257"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497068062705",
            "id": "i-0805eff1cf108f392",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra-app.aws_default_vpc.default",
            "module.prd-infra-app.aws_key_pair.my_key",
            "module.prd-infra-app.aws_security_group.my-secret-group"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-secret-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:497068062705:security-group/sg-05b91cd50d1a0c257",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b91cd50d1a0c257",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from anywhere in the world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access from anywhere in the world",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prd-secret-group",
            "name_prefix": "",
            "owner_id": "497068062705",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-secret-group"
            },
            "tags_all": {
              "Name": "my-secret-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2041036d439e868"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497068062705",
            "id": "sg-05b91cd50d1a0c257",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra-app.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra-app",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:497068062705:vpc/vpc-0d2041036d439e868",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0971a33f3fa726544",
            "default_route_table_id": "rtb-0fab7327bc1f89bdd",
            "default_security_group_id": "sg-06b2a5897b42ddbf6",
            "dhcp_options_id": "dopt-09e57ad3790516b76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0d2041036d439e868",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fab7327bc1f89bdd",
            "owner_id": "497068062705",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.stg-infra-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:497068062705:instance/i-02f454a91606b53ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f454a91606b53ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stg_terra_key_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-006b331658d40e826"
              }
            ],
            "primary_network_interface_id": "eni-006b331658d40e826",
            "private_dns": "ip-172-31-19-38.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.38",
            "public_dns": "ec2-44-251-98-159.us-west-2.compute.amazonaws.com",
            "public_ip": "44.251.98.159",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b7e9a2e2c174f781",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-secret-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b779a9b31694136",
            "tags": {
              "Name": "stg-Custom-EC2-Instance",
              "environment": "stg"
            },
            "tags_all": {
              "Name": "stg-Custom-EC2-Instance",
              "environment": "stg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06888bdb4ced4f86e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497068062705",
            "id": "i-02f454a91606b53ea",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.stg-infra-app.aws_default_vpc.default",
            "module.stg-infra-app.aws_key_pair.my_key",
            "module.stg-infra-app.aws_security_group.my-secret-group"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-secret-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:497068062705:security-group/sg-06888bdb4ced4f86e",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06888bdb4ced4f86e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from anywhere in the world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access from anywhere in the world",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stg-secret-group",
            "name_prefix": "",
            "owner_id": "497068062705",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-secret-group"
            },
            "tags_all": {
              "Name": "my-secret-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2041036d439e868"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497068062705",
            "id": "sg-06888bdb4ced4f86e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.stg-infra-app.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}